# tts_world

./: .gitignore  .pylintrc  Makefile  README.md  conda_env.yml  inference.ipynb  mypy.ini  pyproject.toml  requirements.txt  train_acoustic.ipynb  train_duration.ipynb
tts_world/: acoustic_model.py  preprocess.py  test_preprocess.py  train_acoustic.py  train_duration.py  tts.py  world_extract.py
