[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_world"
description = "TTS with the WORLD vocoder."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
]

[project.optional-dependencies]

[project.scripts]
